--- a/мой сайт 2.html
+++ b/мой сайт 2.html
@@ -32,7 +32,7 @@
 		<h1 class="raw">Контакты для коммуникации</h1>
 			*<a href="https://web.telegram.org/a/">ссылка на телеграмм</a>
 			*<a> Моя почта: egor15.12str@yandex.ru</a>
-
+<p>"QALId"<p>
 			<h2>Обо мне</h2>
 			<p>Люблю свою работу, всегда узнаю что-то новое для себя и развиваюсь на благо своей (вашей) компании</p>
 
